<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">PopMovies</string>

    <string name="action_share">Share</string>

    <string name="action_refresh">Refresh</string>

    <string name="error_message">
        An error has occurred. Please try again by clicking REFRESH
    </string>


    <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
    <string name="backdrop">Backdrop</string>
    <string name="poster">Poster</string>
    <string name="release">Release Date:</string>
    <string name="rating">User\'s ratings:</string>
    <string name="plot">Plot:</string>
    <string name="details_name">Details</string>
    <string name="type_toprated">Top Rated</string>
    <string name="type_popular">Popular</string>


</resources>