<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    android:orientation="vertical">

        <TextView
            android:id="@+id/tv_display_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
                android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tv_display_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/poster"
                    android:padding="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_display_movie_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"/>

                <TextView
                        android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_display_movie_vote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"/>

                <TextView
                        android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plot"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_display_movie_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/tv_display_movie_backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cropToPadding="false"
            android:contentDescription="@string/backdrop" />

</LinearLayout>
    </ScrollView>

